--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "test1",
   "version": "1.0.0",
-  "description": "actualite",
+  "description": "Transcript",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -17,7 +17,6 @@
     "@babel/preset-env": "^7.8.4",
     "@babel/register": "^7.8.3",
     "babel-watch": "^7.0.0",
-    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
