--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "express": "^4.17.1",
     "express-cors": "0.0.3",
     "express-handlebars": "^3.0.2",
-    "handlebars": "^4.5.0",
-    "jsonwebtoken": "^8.5.1"
+    "handlebars": "^4.5.0"
   }
 }
