--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-watch": "^7.0.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "dateformat": "^4.5.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-cors": "0.0.3",
